core/components/Legend.module.css
/* LEGEND BUTTON */

.legend {
    z-index: 1;
    right: 0;
    position: absolute;
    height: 75vh;
    transition: transform 0.5s;
    overflow: hidden;
    align-self: center;
    display: grid;
    grid-template-columns: minmax(0, 3rem) minmax(0, auto);
    user-select: none;
    overscroll-behavior: none;
    width: min(75vw, clamp(380px, 25vw, 33vw));
}

.legendOpen {
    transform: translateX(0);
    -webkit-transform: translateX(0);
}

.legendClose {
    transform: translateX(calc(100% - 3rem));
    -webkit-transform: translateX(calc(100% - 3rem));
}

.legendOpenButton {
    border-radius: 1rem 0 0 1rem;
    display: flex;
    justify-content: center;
    align-items: center;
    -webkit-writing-mode: vertical-rl;
    -ms-writing-mode: tb-rl;
    writing-mode: vertical-rl;
    cursor: pointer;
    height: 70px;
    background-color: #EEEFFC;
    align-self: center;
    width: 3rem;
    border-top: 2px solid #00C49A;
    border-left: 2px solid #00C49A;
    border-bottom: 2px solid #00C49A;
    box-sizing: content-box;
    transition: filter var(--hover-transition-duration);
    overflow: hidden;
}

.legendOpenButton::after {
    content: "";
    height: 70px;
    position: absolute;
    width: 2px;
    background: #EEEFFC;
    display: block;
    top: 0;
    bottom: 0;
    margin: auto 0;
    left: 3rem;
}

@media (hover: hover) {
    .legendOpenButton:hover {
        filter: brightness(95%);
    }
}

.legendOpenButton:active {
    filter: brightness(95%);
}

.legendOpenButton img {
    width: 50%;
    transition: transform 0.5s;
}

.legendOpen .legendOpenButton img {
    transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
}

.legendContent {
    background: linear-gradient(-135deg, #FFFFFF 0%, #EEEFFC 50%, #EEEFFC 75%, #E3E5FA 90%, #D9DBF7 100%);
    background-color: #eeeffc;
    height: 100%;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    overflow: auto;
    border-radius: 2rem 0 0 2rem;
    border-top: 2px solid #00C49A;
    border-left: 2px solid #00C49A;
    border-bottom: 2px solid #00C49A;
}

.subjectDiv {
    border-bottom: var(--border-divider);
}

.subs {
    height: 100%;
    overflow-x: hidden;
    overflow-y: scroll;
    box-sizing: border-box;
    background-color: #EEEFFC;
    background: linear-gradient(-135deg, #FFFFFF 0%, #EEEFFC 50%, #EEEFFC 75%, #E3E5FA 90%, #D9DBF7 100%);
    overscroll-behavior: contain;
}

.animalStory {
    overflow-y: auto;
    overscroll-behavior: contain;
}

.title {
    background-color: #060A23;
    display: flex;
    flex-flow: column nowrap;
    gap: 1rem;
    padding: 1rem 0 1.5rem 0;
    background: linear-gradient(135deg, #060A23 0%, #060A23 75%, #0A0E2C 90%, #0E1235 100%);
    background-color: #060A23;
}

.tracker h1.mapTitle {
    font-family: var(--map-heading-font);
    letter-spacing: var(--heading-letter-spacing);
    font-weight: var(--map-h1-font-weight);
    margin-bottom: 0.5rem;
    padding: 0.5rem 0 0 1rem;
    font-size: 2.33rem;
    color: white;
}

.developerLogo {
    display: grid;
    grid-template-columns: auto;
    grid-template-rows: auto auto;
    grid-row-gap: 0.5rem;
    margin: 0 1rem;
}

.developerText {
    color: #fff;
}

.developerContainer {
    display: flex;
    flex-flow: row wrap;
}

.developerLogo .developerItem {
    display: flex;
    flex: 1;
    align-self: center;
}

.developerLogo .developerItem.dividerbox {
    flex: 0;
    opacity: 0.5;
    margin: 0 0.5rem;
    position: relative;
    border: 1px solid #fff;
    align-self: auto;
}

.developerLogo a {
    margin: 0;
    padding: 0;
    display: flex;
    align-items: flex-end;
    flex: 1;
}

.developerLogo img {
    width: 0px;
    opacity: 0.5;
    flex: 1;
}

.return {
    display: flex;
    align-items: center;
    padding: 1rem;
    background-color: #ebebeb;
    border-bottom: solid 1pt rgba(0, 0, 0, .15);
    box-sizing: border-box;
    font-size: 1rem;
    cursor: pointer;
    transition: filter var(--hover-transition-duration);
}

.return:hover {
    filter: brightness(95%);
}

@media (hover: hover) {
    .return:hover {
        filter: brightness(95%);
    }
}

.return:active {
    filter: brightness(95%);
}

.backArrow {
    width: 1rem;
    height: auto;
}

:global(#gw-map) .return p:global(.map-body) {
    padding-left: 0.75rem
}

.animalColor {
    display: none;
    width: 55%;
    border: solid purple;
}

.storyButton {
    margin-top: auto;
    margin-bottom: auto;
    padding-left: 6px;
    padding-right: 6px;
    margin-right: 6px;
    margin-left: 3px;
}

.subImage {
    width: 100%;
    height: auto;
    padding: 1.5rem 1rem 1rem 1rem;
    box-sizing: border-box;
}

.subContentContainer {
    display: block;
    padding: 1rem;
}

.subContentBody {
    font-family: var(--map-body-font);
    font-size: var(--map-body-font-size);
    color: var(--map-body-color);
    margin-top: 0.125rem;
}

